refactor (add error prone / null away)